# 3-ejercicio-de-dise-o-y-codificaci-n-alejandro-casas-y-juan-andres-correa

./: CMakeLists.txt  link_diagrama.txt
Codigo/: main.cpp
Codigo/src/: Compra.cpp  Producto.cpp
TrabajoGruposAlejandrito1/: CMakeLists.txt  main.cpp
TrabajoGruposAlejandrito1/3-ejercicio-de-dise-o-y-codificaci-n-alejandro-casas-y-juan-andres-correa/: README.md  Tarea.md
TrabajoGruposAlejandrito1/src/: Cliente.cpp  Cliente.h  Compra.cpp  Compra.h  Producto.cpp  Producto.h  Tienda.h
src/: Client.cpp  Client.h  Compra.h  Producto.h  Tienda.cpp  Tienda.h
